--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -126,7 +126,7 @@ jobs:
           cd smoke-testing
           npm install
           npx playwright install --with-deps
-          URL=http://127.0.0.1:3000 npx playwright test tests/03-smoke.spec.js
+          URL=http://localhost:3000 npx playwright test tests/03-smoke.spec.js
 
       - name: Upload Playwright Traces
         if: always()
