--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -114,15 +114,19 @@ jobs:
           python3 -m aiverify_apigw &
           cd ${GITHUB_WORKSPACE}
 
-      - name: Install PORTAL
+      # - name: Install PORTAL
+      #   run: |
+      #     cd aiverify-portal
+      #     npm install
+      #     npm run dev &
+      #     cd ${GITHUB_WORKSPACE}
+
+      - name: Install Portal & Run Smoke Test
         run: |
           cd aiverify-portal
           npm install
           npm run dev &
           cd ${GITHUB_WORKSPACE}
-
-      - name: Run Smoke Test
-        run: |
           cd smoke-testing
           npm install
           npx playwright install --with-deps
