--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -115,7 +115,7 @@ jobs:
           cd aiverify-apigw
           pip install hatch
           hatch shell
-          bash ./install-amd64.sh
+          # bash ./install-amd64.sh
           npm link aiverify-shared-library
           python3 -m aiverify_apigw &
           cd ${GITHUB_WORKSPACE}
