--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -69,8 +69,7 @@ jobs:
         run: |
           cd aiverify-apigw
           touch .env
-          echo "MONGODB_URI=mongodb://localhost:27017 \ DB_NAME=aiverify \PORT=4000" >> .env
-          cat .env
+          echo "MONGODB_URI=mongodb://localhost:27017 \ DB_NAME=aiverify \ PORT=4000" >> .env
           pip install hatch
           hatch shell &
           sh ./install-amd64.sh
@@ -83,7 +82,6 @@ jobs:
           cd aiverify-portal
           touch .env
           echo "APIGW_HOST=http://localhost:4000" >> .env
-          cat .env
           npm ci
           npm run dev &
           cd ${GITHUB_WORKSPACE}
@@ -108,8 +106,8 @@ jobs:
             --set_seed 10 \
             --file_name_label file_name
           cd output
-          zip -r digital-corruptions.zip .
-          cp digital-corruptions.zip ${GITHUB_WORKSPACE}/smoke-testing/fixtures/
+          zip -r digital_corruptions.zip .
+          cp digital_corruptions.zip ${GITHUB_WORKSPACE}/smoke-testing/fixtures/
           cd ${GITHUB_WORKSPACE}
 
       - name: Create Zip Test Results using FMTC Toolbox
