--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -86,7 +86,7 @@ jobs:
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=aiverify-apigw --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="aiverify-apigw_$BRANCH" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           mv aiverify_apigw_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
           deactivate
-          cd ../
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan APIGW (Main)
       if: inputs.branch_to_test == 'main'
@@ -94,18 +94,17 @@ jobs:
           cd ai-verify-apigw
           npm install
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=ai-verify-apigw --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="ai-verify-apigw_$BRANCH" --detect.excluded.directories=tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
-          cd ../
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan PORTAL (v2.x)
       if: inputs.branch_to_test == 'v2.x'
       run: |
         cd aiverify-portal
         rm package-lock.json
-        npm -v
         npm install --omit=dev --omit=optional
         bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=aiverify-portal --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="aiverify-portal_$BRANCH" --detect.excluded.directories=tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
         mv aiverify_portal_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
-        cd ../
+        cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan PORTAL (Main)
       if: inputs.branch_to_test == 'main'
@@ -113,7 +112,7 @@ jobs:
           cd ai-verify-portal
           npm install
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=ai-verify-portal --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="ai-verify-portal_$BRANCH" --detect.excluded.directories=tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
-          cd ../
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan SHARED LIBRARY (Main)
       if: inputs.branch_to_test == 'main'
@@ -121,7 +120,7 @@ jobs:
           cd ai-verify-shared-library
           npm install
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=ai-verify-shared-library --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="ai-verify-shared-library_$BRANCH" --detect.excluded.directories=tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
-          cd ../
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan TEST ENGINE (v2.x)
       if: inputs.branch_to_test == 'v2.x'
@@ -139,7 +138,7 @@ jobs:
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=aiverify-test-engine --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="aiverify-test-engine_$BRANCH" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           mv aiverify_test_engine_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
           deactivate
-          cd ../
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan TEST ENGINE (Main)
       if: inputs.branch_to_test == 'main'
@@ -150,7 +149,7 @@ jobs:
           pip install -r requirements.txt
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=test-engine-app --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="test-engine-app_$BRANCH" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           deactivate
-          cd ../
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan TEST ENGINE CORE (Main)
       if: inputs.branch_to_test == 'main'
@@ -161,7 +160,7 @@ jobs:
           pip install -r requirements.txt
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=test-engine-core --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="test-engine-core_$BRANCH" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           deactivate
-          cd ../
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan TEST ENGINE CORE MODULES (Main)
       if: inputs.branch_to_test == 'main'
@@ -172,7 +171,7 @@ jobs:
           pip install -r requirements.txt
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=test-engine-core-modules --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="test-engine-core-modules_$BRANCH" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           deactivate
-          cd ../
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan Accumulated Local Effects (v2.x)
       if: inputs.branch_to_test == 'v2.x'
@@ -190,6 +189,7 @@ jobs:
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=accumulated-local-effect --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="accumulated-local-effect_$BRANCH" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           mv accumulated_local_effect_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
           deactivate
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan Decorators (v2.x)
       if: inputs.branch_to_test == 'v2.x'
@@ -198,6 +198,7 @@ jobs:
           npm install
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=decorators --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="decorators_$BRANCH" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           mv decorators_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan Fairness Metric ToolBox For Classification (v2.x)
       if: inputs.branch_to_test == 'v2.x'
@@ -215,6 +216,7 @@ jobs:
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=fairness-metrics-toolbox-for-classification --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="fairness-metrics-toolbox-for-classification_$BRANCH" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           mv fairness_metrics_toolbox_for_classification_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
           deactivate
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan Fairness Metric ToolBox For Regression (v2.x)
       if: inputs.branch_to_test == 'v2.x'
@@ -232,23 +234,25 @@ jobs:
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=fairness-metrics-toolbox-for-regression --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="fairness-metrics-toolbox-for-regression_$BRANCH" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           mv fairness_metrics_toolbox_for_regression_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
           deactivate
+          cd ${GITHUB_WORKSPACE}
 
-    # - name: Install & Scan Blur Corruptions (v2.x)
-    #   if: inputs.branch_to_test == 'v2.x'
-    #   run: |
-    #       cd stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions
-    #       python3 -m venv .venv
-    #       source .venv/bin/activate
-    #       pip install -e .
-    #       pip freeze > requirements.txt
-    #       rm -rf .venv
+    - name: Install & Scan Blur Corruptions (v2.x)
+      if: inputs.branch_to_test == 'v2.x'
+      run: |
+          cd aiverify-test-engine
+          source .venv/bin/activate
+          cd {GITHUB_WORKSPACE}
+          cd stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions
+          pip install -e .
+          pip freeze > requirements.txt
+          deactivate
 
-    #       python3 -m venv .venv
-    #       source .venv/bin/activate
-    #       pip install -r requirements.txt
-    #       bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=blur-corruptions --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="blur-corruptions_$BRANCH" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
-    #       mv blur_corruptions_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
-    #       deactivate
+          python3 -m venv .venv
+          source .venv/bin/activate
+          pip install -r requirements.txt
+          bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=blur-corruptions --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="blur-corruptions_$BRANCH" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
+          mv blur_corruptions_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
+          deactivate
 
     # - name: Install & Scan Digital Corruptions (v2.x)
     #   if: inputs.branch_to_test == 'v2.x'
