--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -84,7 +84,7 @@ jobs:
         run: |
           cd aiverify-portal
           touch .env
-          echo "APIGW_HOST=http://localhost:4000" >> .env
+          echo "APIGW_HOST=http://127.0.0.1:4000" >> .env
           npm ci
           npm run dev &
           cd ${GITHUB_WORKSPACE}
