--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -58,37 +58,6 @@ jobs:
         run: |
           echo "ROOT_PATH=${{ github.workspace }}/stock-plugins/user_defined_files" >> $GITHUB_ENV
 
-      - name: Install AI Verify Shared Library
-        run: |
-          cd aiverify-shared-library
-          npm install
-          npm run build
-          npm link
-          cd ${GITHUB_WORKSPACE}
-
-      - name: Install APIGW & Start APIGW
-        run: |
-          cd aiverify-apigw
-          touch .env
-          echo "MONGODB_URI=mongodb://127.0.0.1:27017 \ DB_NAME=aiverify \ PORT=4000" >> .env
-          pip install hatch
-          hatch shell &
-          sh ./install-amd64.sh
-          cd aiverify-apigw-node
-          npm link aiverify-shared-library
-          cd ../
-          python3 -m aiverify_apigw &
-          cd ${GITHUB_WORKSPACE}
-
-      - name: Install PORTAL
-        run: |
-          cd aiverify-portal
-          touch .env
-          echo "APIGW_HOST=http://127.0.0.1:4000" >> .env
-          npm install
-          npm run dev &
-          cd ${GITHUB_WORKSPACE}
-
       - name: Create Zip Test Results using Digital Corruption
         run: |
           cd aiverify-test-engine
@@ -134,13 +103,45 @@ jobs:
           cp output/results.json ${GITHUB_WORKSPACE}/smoke-testing/fixtures/
           deactivate
           cd ${GITHUB_WORKSPACE}
+          pwd
 
-      - name: Run Smoke Test
+      - name: Install AI Verify Shared Library
         run: |
-          cd smoke-testing
-          npm ci
-          npx playwright install --with-deps
-          URL=http://127.0.0.1:3000 npx playwright test tests/03-smoke.spec.js
+          cd aiverify-shared-library
+          npm install
+          npm run build
+          npm link
+          cd ${GITHUB_WORKSPACE}
+
+      - name: Install APIGW & Start APIGW
+        run: |
+          cd aiverify-apigw
+          touch .env
+          echo "MONGODB_URI=mongodb://127.0.0.1:27017 \ DB_NAME=aiverify \ PORT=4000" >> .env
+          pip install hatch
+          hatch shell &
+          sh ./install-amd64.sh
+          cd aiverify-apigw-node
+          npm link aiverify-shared-library
+          cd ../
+          python3 -m aiverify_apigw &
+          # cd ${GITHUB_WORKSPACE}
+
+      # - name: Install PORTAL
+      #   run: |
+      #     cd aiverify-portal
+      #     touch .env
+      #     echo "APIGW_HOST=http://127.0.0.1:4000" >> .env
+      #     npm install
+      #     npm run dev &
+      #     cd ${GITHUB_WORKSPACE}
+
+      # - name: Run Smoke Test
+      #   run: |
+      #     cd smoke-testing
+      #     npm ci
+      #     npx playwright install --with-deps
+      #     URL=http://127.0.0.1:3000 npx playwright test tests/03-smoke.spec.js
 
       - name: Upload Playwright Traces
         if: always()
