--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -70,7 +70,7 @@ jobs:
         run: |
           cd aiverify-apigw
           touch .env
-          echo "MONGODB_URI=mongodb://127.0.0.1:27017 \ DB_NAME=aiverify \ PORT=4000" >> .env
+          echo "MONGODB_URI=mongodb://localhost:27017 \ DB_NAME=aiverify \ PORT=4000" >> .env
           python3 -m venv .venv
           source .venv/bin/activate
           pip install --no-cache-dir torch==2.4.1+cpu --index-url https://download.pytorch.org/whl/cpu
@@ -123,7 +123,7 @@ jobs:
         run: |
           cd aiverify-portal
           touch .env
-          echo "APIGW_HOST=http://127.0.0.1:4000" >> .env
+          echo "APIGW_HOST=http://localhost:4000" >> .env
           npm install
           npm run dev &
           cd ${GITHUB_WORKSPACE}
@@ -133,7 +133,7 @@ jobs:
           cd smoke-testing
           npm ci
           npx playwright install --with-deps
-          URL=http://127.0.0.1:3000 npx playwright test tests/03-smoke.spec.js
+          URL=http://localhost:3000 npx playwright test tests/03-smoke.spec.js
 
       - name: Upload Playwright Traces
         if: always()
