--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -84,6 +84,15 @@ jobs:
           sleep 180
           cd ${GITHUB_WORKSPACE}
 
+      - name: Install PORTAL
+        run: |
+          cd aiverify-portal
+          touch .env
+          echo "APIGW_HOST=http://localhost:4000" >> .env
+          npm install
+          npm run dev > output.log 2>&1 &
+          cd ${GITHUB_WORKSPACE}
+
       - name: Create Zip Test Results using Digital Corruption
         run: |
           cd aiverify-test-engine
@@ -132,19 +141,10 @@ jobs:
           rm -rf .venv2
           cd ${GITHUB_WORKSPACE}
 
-      - name: Install PORTAL
-        run: |
-          cd aiverify-portal
-          touch .env
-          echo "APIGW_HOST=http://localhost:4000" >> .env
-          npm install
-          npm run dev &
-          cd ${GITHUB_WORKSPACE}
-
       - name: Run Smoke Test
         run: |
           cd smoke-testing
-          npm ci
+          npm install
           npx playwright install --with-deps
           URL=http://localhost:3000 npx playwright test tests/03-smoke.spec.js
 
@@ -160,3 +160,8 @@ jobs:
         if: always()
         run: |
           cat ${GITHUB_WORKSPACE}/aiverify-apigw/output.log
+
+      - name: PORTAL Logs
+        if: always()
+        run: |
+          cat ${GITHUB_WORKSPACE}/aiverify-portal/output.log
