Add sample pytorch pipelien

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -36,7 +36,7 @@
         "--data_path",
         "data/raw_fashion_image_10",
         "--model_path",
-        "model/sample_fashion_mnist_pytorch.pt",
+        "pipeline/sample_fashion_mnist_pytorch",
         "--model_type",
         "CLASSIFICATION",
         "--ground_truth_path",
