--- a/.github/workflows/coverity-scan.yml
+++ b/.github/workflows/coverity-scan.yml
@@ -29,7 +29,7 @@ jobs:
       COVERITY_PASSPHRASE: ${{ secrets.COVERITY_PASSPHRASE }}
       CSA_URL: ${{ secrets.CSA_URL }}
       CSA: cov-analysis-linux64-2024.12.1
-      COV_STREAM: aiverify-2.x
+      COV_STREAM: aiverify-v2.x
       CHECKERS: --webapp-security
       
     steps:
@@ -45,8 +45,6 @@ jobs:
         curl -fLsS --user $COV_USER:$COVERITY_PASSPHRASE -o /tmp/$CSA/bin/license.dat $COV_URL/downloadFile.htm?fn=license.dat
         /tmp/$CSA/bin/cov-configure --java
 
-        # unzip $CSA.tar.gz
-
     - name: Coverity Full Scan
       run: |
         export PATH=$PATH:/tmp/$CSA/bin
@@ -56,11 +54,11 @@ jobs:
         cov-commit-defects --dir idir --ticker-mode none --url $COV_URL --stream $COV_STREAM --scm git \
           --description $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID --target $RUNNER_OS --version $GITHUB_SHA
 
-    # - name: Coverity Quality Gate
-    #   if: ${{ github.event_name != 'pull_request' }}
-    #   run: |
-    #     curl -fLsS --user $COV_USER:$COVERITY_PASSPHRASE $COV_URL/api/viewContents/issues/v1/OWASP%20Web%20Top%2010?projectId=$COVERITY_PROJECT > results.json
-    #     if [ $(cat results.json | jq .viewContentsV1.totalRows) -ne 0 ]; then cat results.json | jq .viewContentsV1.rows; exit 1; fi
+    - name: Coverity Quality Gate
+      # if: ${{ github.event_name != 'pull_request' }}
+      run: |
+        curl -fLsS --user $COV_USER:$COVERITY_PASSPHRASE $COV_URL/api/viewContents/issues/v1/OWASP%20Web%20Top%2010?projectId=$COVERITY_PROJECT > results.json
+        if [ $(cat results.json | jq .viewContentsV1.totalRows) -ne 0 ]; then cat results.json | jq .viewContentsV1.rows; exit 1; fi
 
     # - id: changeset
     #   name: Get Pull Request Changeset
